--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,15 @@
     "require": {
         "php": "^8.0.2",
         "azishapidin/indoregion": "^3.0",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "ckeditor/ckeditor": "^4.21",
         "guzzlehttp/guzzle": "^7.2",
+        "jn-jairo/laravel-ngrok": "^3.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.6",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "midtrans/midtrans-php": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
